This commit will
inform a user if they do not have permisions to perform an action

--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list-results.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list-results.html
@@ -161,6 +161,7 @@
             }
 
             _handleItemClick(e) {
+                this.$.list.deselectItem(e.model.item);
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFinanceListResults.is + '-action-detail', {
                     bubbles: true,
                     composed: true,
