--- a/elements/crew-team-manager-finance/crew-team-manager-finance.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance.html
@@ -53,7 +53,8 @@
             </crew-team-manager-finance-list>
 
             <crew-team-manager-finance-detail id="detail" finance="[[_finance]]" page="loading" on-crew-team-manager-finance-detail-action-back="_handleActionBack"
-                on-crew-team-manager-finance-detail-action-edit="_handleActionEdit" on-crew-team-manager-finance-detail-action-delete="_handleActionDelete">
+                on-crew-team-manager-finance-detail-action-edit="_handleActionEdit" on-crew-team-manager-finance-detail-action-delete="_handleActionDelete"
+                on-crew-team-manager-finance-detail-action-delete-fail="_handleActionFail">
             </crew-team-manager-finance-detail>
 
             <crew-team-manager-finance-edit edit="[[_edit]]" id="edit" finance="[[_finance]]" on-crew-team-manager-finance-edit-action-back="_handleActionBackOnce"
@@ -164,6 +165,13 @@
             _handleActionCanceled(e) {
                 this.page = 'list';
                 this._toast = 'Cancelled Finance Create';
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
+            }
+
+            _handleActionFail() {
+                this.page = 'list'
+                this._toast = 'You do not have permision to do that';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
