--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list.html
@@ -161,6 +161,14 @@
                             }));
 
 
+                    })
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-fanout-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
                     });
             }
 
