--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
@@ -158,6 +158,14 @@
                                 bubbles: true,
                                 composed: true
                             }));
+                    })
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-fanout-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
                     });
 
             }
