--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
@@ -160,11 +160,22 @@
             }
 
             _handleActionDelete(e) {
-                this.$.firebase.destroy();
-                this.dispatchEvent(new CustomEvent(crewTeamManagerErgDetail.is + '-action-delete', {
-                    bubbles: true,
-                    composed: true
-                }));
+                this.$.firebase.destroy()
+                    .then(() => {
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerErgDetail.is +
+                            '-action-delete', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    })
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerErgDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
             }
         }
 
