--- a/elements/crew-team-manager-erg/crew-team-manager-erg.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg.html
@@ -48,12 +48,13 @@
         </style>
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
-            <crew-team-manager-erg-list id="list" menu-hidden$="[[wideLayout]]" page="loading" on-crew-team-manager-erg-list-results-action-detail="_handleActionDetail"
+            <crew-team-manager-erg-list id="list" menu-hidden$="[[wideLayout]]" page="loading" selected="false" on-crew-team-manager-erg-list-results-action-detail="_handleActionDetail"
                 on-crew-team-manager-erg-list-action-create="_handleActionCreate" team-id="[[teamId]]">
             </crew-team-manager-erg-list>
 
             <crew-team-manager-erg-detail id="detail" erg="[[_erg]]" page="loading" on-crew-team-manager-erg-detail-action-back="_handleActionBack"
-                on-crew-team-manager-erg-detail-action-edit="_handleActionEdit" on-crew-team-manager-erg-detail-action-delete="_handleActionDelete">
+                on-crew-team-manager-erg-detail-action-edit="_handleActionEdit" on-crew-team-manager-erg-detail-action-delete="_handleActionDelete"
+                on-crew-team-manager-erg-detail-action-delete-fail="_handleActionFail">
             </crew-team-manager-erg-detail>
 
             <crew-team-manager-erg-edit edit="[[_edit]]" id="edit" erg="[[_erg]]" on-crew-team-manager-erg-edit-action-back="_handleActionBackOnce"
@@ -146,7 +147,6 @@
             }
 
             _handleActionDelete(e) {
-                this._erg = e.detail.erg;
                 this.page = 'list';
                 this._toast = 'Erg Deleted';
                 this.$.toast.fitInto = this.$.pages;
@@ -163,6 +163,13 @@
             _handleActionCancel(e) {
                 this.page = 'list';
                 this._toast = 'Cancelled Erg Create';
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
+            }
+
+            _handleActionFail() {
+                this.page = 'list'
+                this._toast = 'You do not have permision to do that';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
