--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -228,17 +228,53 @@
 
             _handleActionDelete(e) {
                 this.$.firebase.path = 'boatAthletes/' + this.boat;
-                this.$.firebase.destroy();
+                this.$.firebase.destroy()
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
                 this.$.firebase.path = 'boatOars/' + this.boat;
-                this.$.firebase.destroy();
+                this.$.firebase.destroy()
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
                 this.$.firebase.path = 'boatRiggers/' + this.boat;
-                this.$.firebase.destroy();
+                this.$.firebase.destroy()
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
                 this.$.firebase.path = 'boats/' + this.boat;
-                this.$.firebase.destroy();
-                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is + '-action-delete', {
-                    bubbles: true,
-                    composed: true
-                }));
+                this.$.firebase.destroy()
+                    .then(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-delete', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    })
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
             }
 
             _handleActionAddAthlete() {
