--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
@@ -53,7 +53,7 @@
             <crew-team-manager-fleet-detail id="detail" boat="[[_boat]]" page="loading" on-crew-team-manager-fleet-detail-action-back="_handleActionBack"
                 on-crew-team-manager-fleet-detail-action-edit="_handleActionEdit" on-crew-team-manager-fleet-detail-action-delete="_handleActionDelete"
                 on-crew-team-manager-fleet-detail-action-add-rigger="_handleActionAddRigger" on-crew-team-manager-fleet-detail-action-add-athlete="_handleActionAddAthlete"
-                on-crew-team-manager-fleet-detail-action-add-oar="_handleActionAddOar" team-id="[[teamId]]">
+                on-crew-team-manager-fleet-detail-action-add-oar="_handleActionAddOar" team-id="[[teamId]]" on-crew-team-manager-fleet-detail-action-delete-fail="_handleActionFail">
             </crew-team-manager-fleet-detail>
 
             <crew-team-manager-fleet-edit edit="[[_edit]]" id="edit" boat="[[_boat]]" on-crew-team-manager-fleet-edit-action-back="_handleActionBackOnce"
@@ -65,11 +65,11 @@
             </crew-team-manager-fleet-create>
 
             <crew-team-manager-fleet-roster-list id="athlete" team-id="[[teamId]]" boat="[[_boat]]" page="loading" on-crew-team-manager-fleet-roster-list-action-back="_handleActionBackOnce"
-                on-crew-team-manager-fleet-roster-list-action-add-athletes="_handleActionAddedAthletes"></crew-team-manager-fleet-roster-list>
+                on-crew-team-manager-fleet-roster-list-action-add-athletes="_handleActionAddedAthletes" on-crew-team-manager-fleet-detail-action-fanout-fail="_handleActionFail"></crew-team-manager-fleet-roster-list>
             <crew-team-manager-fleet-oar-list id="oar" team-id="[[teamId]]" boat="[[_boat]]" page="loading" on-crew-team-manager-fleet-oar-list-action-back="_handleActionBackOnce"
-                on-crew-team-manager-fleet-oar-list-action-add-oars="_handleActionAddedOars"></crew-team-manager-fleet-oar-list>
+                on-crew-team-manager-fleet-oar-list-action-add-oars="_handleActionAddedOars" on-crew-team-manager-fleet-detail-action-fanout-fail="_handleActionFail"></crew-team-manager-fleet-oar-list>
             <crew-team-manager-fleet-rigger-list id="rigger" team-id="[[teamId]]" boat="[[_boat]]" page="loading" on-crew-team-manager-fleet-rigger-list-action-back="_handleActionBackOnce"
-                on-crew-team-manager-fleet-rigger-list-action-add-riggers="_handleActionAddedRiggers"></crew-team-manager-fleet-rigger-list>
+                on-crew-team-manager-fleet-rigger-list-action-add-riggers="_handleActionAddedRiggers" on-crew-team-manager-fleet-detail-action-fanout-fail="_handleActionFail"></crew-team-manager-fleet-rigger-list>
         </iron-pages>
 
         <paper-toast id="toast" duration="4000">[[_toast]]</paper-toast>
@@ -220,6 +220,13 @@
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
                 this.page = 'detail';
+            }
+
+            _handleActionFail() {
+                this.page = 'list'
+                this._toast = 'You do not have permision to do that';
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
             }
         }
 
