--- a/elements/crew-team-manager-roster/crew-team-manager-roster-finance-create.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-finance-create.html
@@ -154,15 +154,26 @@
                             _key = _key + this.$.firebase.path[x];
                         }
                         const path = 'athleteFinances/' + this.athlete + '/' + _key;
-                        this.$.firebase.setStoredValue(path, true);
-                        this.dispatchEvent(new CustomEvent(crewTeamManagerRosterFinanceCreate.is +
-                            '-action-created', {
-                                detail: {
-                                    finance: gross
-                                },
-                                bubbles: true,
-                                composed: true
-                            }));
+                        this.$.firebase.setStoredValue(path, true)
+                            .then(() => {
+                                this.dispatchEvent(new CustomEvent(crewTeamManagerRosterFinanceCreate.is +
+                                    '-action-created', {
+                                        detail: {
+                                            finance: gross
+                                        },
+                                        bubbles: true,
+                                        composed: true
+                                    }));
+                            })
+                            .catch(() => {
+
+                                this.dispatchEvent(new CustomEvent(crewTeamManagerRosterFinanceCreate.is +
+                                    '-action-fanout-fail', {
+                                        bubbles: true,
+                                        composed: true
+                                    }));
+                            });
+
                     });
 
 
