--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -192,15 +192,44 @@
 
             _handleActionDelete(e) {
                 this.$.firebase.path = 'regattaPictures/' + this.regatta;
-                this.$.firebase.destroy();
+                this.$.firebase.destroy()
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
                 this.$.firebase.path = 'regattaRaces/' + this.regatta;
-                this.$.firebase.destroy();
+                this.$.firebase.destroy()
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
                 this.$.firebase.path = 'regattas/' + this.regatta;
-                this.$.firebase.destroy();
-                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is + '-action-delete', {
-                    bubbles: true,
-                    composed: true
-                }));
+                this.$.firebase.destroy()
+                    .then(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is +
+                            '-action-delete', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    })
+                    .catch(() => {
+
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is +
+                            '-action-delete-fail', {
+                                bubbles: true,
+                                composed: true
+                            }));
+                    });
+
             }
 
             _handleActionAddRace() {
