--- a/elements/crew-team-manager-erg/crew-team-manager-erg.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg.html
@@ -48,7 +48,7 @@
         </style>
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
-            <crew-team-manager-erg-list id="list" menu-hidden$="[[wideLayout]]" page="loading" selected="false" on-crew-team-manager-erg-list-results-action-detail="_handleActionDetail"
+            <crew-team-manager-erg-list id="list" menu-hidden$="[[wideLayout]]" page="loading" on-crew-team-manager-erg-list-results-action-detail="_handleActionDetail"
                 on-crew-team-manager-erg-list-action-create="_handleActionCreate" team-id="[[teamId]]">
             </crew-team-manager-erg-list>
 
